argocd/resources/traefik-test/ingress-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test
  namespace: default
spec:
  replicas: 1

  selector:
    matchLabels:
      app: ingress-test

  template:
    metadata:
      labels:
        app: ingress-test

    spec:
      containers:
        - name: nginx
          image: nginx:1.29-alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-test
  namespace: default

spec:
  selector:
    app: ingress-test

  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: default

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - traefik-test.quantum.nyameko.com
      secretName: traefik-test-tls

  rules:
    - host: traefik-test.quantum.nyameko.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: ingress-test
                port:
                  number: 80
